# python_flet_project

./: .gitignore  README.md  SPEC.MD  main.py  pyproject.toml  requirements.txt
src/: main.py
src/components/: __init__.py  custom_button.py  custom_card.py  custom_input.py  navbar.py
src/models/: __init__.py  product_model.py  settings_model.py  user_model.py
src/utils/: __init__.py  colors.py  theme.py  validators.py
src/viewmodels/: __init__.py  base_viewmodel.py  home_viewmodel.py  login_viewmodel.py  settings_viewmodel.py
src/views/: __init__.py  home_view.py  login_view.py  settings_view.py
