[project]
name = "python-flet-project"
version = "0.1.0"
description = "A simple Flet application with forms using MVVM pattern"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flet>=0.24.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
